js/src/builtin/Reflect.cpp
@@ -27,7 +27,8 @@ Reflect_defineProperty(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject obj(cx, NonNullObject(cx, args.get(0)));
+    RootedObject obj(cx, NonNullObjectArg(cx, "`target`", "Reflect.defineProperty",
+                                          args.get(0)));
     if (!obj)
         return false;
 
@@ -57,7 +58,8 @@ Reflect_deleteProperty(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject target(cx, NonNullObject(cx, args.get(0)));
+    RootedObject target(cx, NonNullObjectArg(cx, "`target`", "Reflect.deleteProperty",
+                                             args.get(0)));
     if (!target)
         return false;
 
@@ -82,7 +84,7 @@ Reflect_get(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject obj(cx, NonNullObject(cx, args.get(0)));
+    RootedObject obj(cx, NonNullObjectArg(cx, "`target`", "Reflect.get", args.get(0)));
     if (!obj)
         return false;
 
@@ -105,7 +107,7 @@ Reflect_getOwnPropertyDescriptor(JSContext* cx, unsigned argc, Value* vp)
 {
     // Step 1.
     CallArgs args = CallArgsFromVp(argc, vp);
-    if (!NonNullObject(cx, args.get(0)))
+    if (!NonNullObjectArg(cx, "`target`", "Reflect.getOwnPropertyDescriptor", args.get(0)))
         return false;
 
     // The other steps are identical to ES6 draft rev 32 (2015 Feb 2) 19.1.2.6
@@ -120,7 +122,8 @@ js::Reflect_getPrototypeOf(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject target(cx, NonNullObject(cx, args.get(0)));
+    RootedObject target(cx, NonNullObjectArg(cx, "`target`", "Reflect.getPrototypeOf",
+                                             args.get(0)));
     if (!target)
         return false;
 
@@ -139,7 +142,7 @@ js::Reflect_isExtensible(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject target(cx, NonNullObject(cx, args.get(0)));
+    RootedObject target(cx, NonNullObjectArg(cx, "`target`", "Reflect.isExtensible", args.get(0)));
     if (!target)
         return false;
 
@@ -158,7 +161,7 @@ Reflect_ownKeys(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    if (!NonNullObject(cx, args.get(0)))
+    if (!NonNullObjectArg(cx, "`target`", "Reflect.ownKeys", args.get(0)))
         return false;
 
     // Steps 2-4.
@@ -172,7 +175,8 @@ Reflect_preventExtensions(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject target(cx, NonNullObject(cx, args.get(0)));
+    RootedObject target(cx, NonNullObjectArg(cx, "`target`", "Reflect.preventExtensions",
+                                             args.get(0)));
     if (!target)
         return false;
 
@@ -191,7 +195,7 @@ Reflect_set(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject target(cx, NonNullObject(cx, args.get(0)));
+    RootedObject target(cx, NonNullObjectArg(cx, "`target`", "Reflect.set", args.get(0)));
     if (!target)
         return false;
 
@@ -225,7 +229,7 @@ Reflect_setPrototypeOf(JSContext* cx, unsigned argc, Value* vp)
     CallArgs args = CallArgsFromVp(argc, vp);
 
     // Step 1.
-    RootedObject obj(cx, NonNullObject(cx, args.get(0)));
+    RootedObject obj(cx, NonNullObjectArg(cx, "`target`", "Reflect.setPrototypeOf", args.get(0)));
     if (!obj)
         return false;
 
